fix some alignments

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,7 +2,7 @@
     display:grid;
     font-size: 25px;
     min-width: 100%;
-    grid-template-columns: 1fr 1fr 1fr 3fr;
+    grid-template-columns: 10% 10% 10% 70%;
     justify-content: start;
   }
 
